--- a/react-examples/package.json
+++ b/react-examples/package.json
@@ -21,7 +21,9 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
-    "zod": "^3.23.8"
+    "use-context-selector": "^2.0.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
